--- a/location/pubspec.yaml
+++ b/location/pubspec.yaml
@@ -1,11 +1,11 @@
 name: location
 description: A Flutter plugin to easily handle realtime location in iOS and Android. Provides settings for optimizing performance or battery.
-version: 3.0.0
+version: 3.2.3
 author: Guillaume Bernos <guillaume@bernos.dev>
 homepage: https://github.com/Lyokone/flutterlocation
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
   flutter: ">=1.12.13+hotfix.5 <2.0.0"
 
 flutter:
@@ -24,14 +24,16 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
+  location_platform_interface: 
+    path: ../location_platform_interface
+  location_web: 
+    path: ../location_web
   meta: ^1.0.5
-  location_platform_interface: ^1.0.0
-  location_web: ^1.0.0
 
 dev_dependencies:
   async: ^2.0.8
-  test: ^1.3.0
-  mockito: 3.0.0
   flutter_test:
     sdk: flutter
-  e2e: ^0.2.4+1
+  mockito: 3.0.0
+  plugin_platform_interface: ^1.0.3
+  test: ^1.3.0
